# gemma_web_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gemma_web_cli/: cli.py  config.py  embeddings.py  memory.py  prompts.py  reader.py  requirements.txt  research.py  router.py  search.py
src/gemma_web_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_research.py
